2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Use
	PKL_GEN_PUSH_CONTEXT instead of DUP_CONTEXT + CLEAR_CONTEXT.  It
	is more robust.
	(array_writer): Likewise.
	(array_bounder): Likewise.
	(handle_struct_field_label): Likewise.
	(handle_struct_field_constraints): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	(struct_field_writer): Likewise.
	(struct_writer): Likewise.
	(struct_integrator): Likewise.
	(complex_lmap): Likewise.

	* testsuite/poke.pkl/scons-constraints-3.pk: New test.
	* testsuite/poke.map/maps-structs-constraints-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Fix vars_registered with
	declarations in struct types.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/optcond-21.pk: New test.
	* testsuite/poke.map/map-optcond-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Make the header C++ compliant.
	* libpoke/libpoke.c: Vandalize accordingly :(

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Remove spurious
	commented insn.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Use
	check_struct_field_constraint.
	* testsuite/poke.pkl/scons-constraints-1.pk: New test.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Update test.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_printer): Skip absent fields.
	* testsuite/poke.pkl/printf-value-16.pk: New test.
	* testsuite/poke.pkl/printf-value-17.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-03  Luca Saiu  <positron@gnu.org>

	* cfg.mk (submodule-checks): Override setting in maint.mk, fixing
	a distcheck failure.
